# mcp-jobboard

./: .aider.chat.history.md  .env.example  .gitignore  CHANGELOG.md  README.md  context.md  main.py  pyproject.toml  test_workatastartup.py
docs/: MCP_PARSING_DESIGN.md  TESTING_MCP_PARSERS.md  refactor.md
scripts/: diagnose_url.py  quick_parse_url.py  test_job_service.py  test_single_url.py
src/jobboard_mcp/: config.py  logging_config.py  main.py  server.py
src/jobboard_mcp/crawlers/: base.py  hackernews.py  hackernews_jobs.py  linkedin.py  techcrunch.py  workatastartup.py  yc_companies.py  ycombinator.py
src/jobboard_mcp/models/: base.py  job.py
src/jobboard_mcp/parsing/: __init__.py  models.py  registry.py  utils.py
src/jobboard_mcp/parsing/parsers/: ashby.py  generic.py  greenhouse.py  hub_form.py  lever.py  yc.py
src/jobboard_mcp/resources/: jobs.py
src/jobboard_mcp/services/: __init__.py  job_service.py
src/jobboard_mcp/tools/: jobs.py
src/jobboard_mcp/utils/: fallback.py
